IGBF-4188 Ensure Install button is hidden on mobile view as expected

--- a/htdocs/css/menu.css
+++ b/htdocs/css/menu.css
@@ -180,7 +180,7 @@
 
   .navbar .btn-group {
     padding: 0 0 20px 15px;
-    display: none;
+    display: none !important;
   }
 }
 
